# BNO_Localizer

./: .gitignore  BNO085.md  test_topics.sh
pico_build/: .imu.c.swp  CMakeLists.txt  blink_test.c  i2c_scanner.c  imu.c  imu_flipper_test.c  imu_single_read.c  pico_imu.c  pico_reader.py  shtp_1.c  shtp_2.c
src/: usb_test.py
src/localiser/: package.xml  setup.cfg  setup.py
src/localiser/config/: calibration.json
src/localiser/localiser/: eskf.py  eskf_calibrator.py  eskf_localiser.py  imu_calibration_node.py  imu_node.py  threshold_calculator.py  usb_node.py  usb_test_data_stream.py  usb_test_lib_node.py  usb_test_node.py
